[GET] /server
