# swagger/swagger.yaml
@@ -56,7 +56,25 @@ definitions:
     type: object
   models.Server:
     properties:
+      contentType:
+        type: string
+      ip:
+        type: string
+      pid:
+        type: integer
       port:
+        type: integer
+      process:
+        type: string
+      protocol:
+        type: string
+      response:
+        type: string
+      sockState:
+        type: string
+      statusCode:
+        type: integer
+      uid:
         type: integer
     type: object
 host: localhost
